--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -28,6 +28,7 @@
     "firebase": "^5.11.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
+    "tar": "^4.4.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
