--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "firebase": "^5.11.1",
+    "ngx-pagination": "^3.2.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
     "tar": "^4.4.2",
